--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "6.0.*",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
-        "linecorp/line-bot-sdk": "^4.1"
+        "linecorp/line-bot-sdk": "^4.1",
+        "socialiteproviders/microsoft-azure": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
