--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "6.0.*",
+        "laravel/helpers": "^1.2",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "linecorp/line-bot-sdk": "^4.1",
