--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^7.24",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.*"
+        "laravel/ui": "2.*",
+        "socialiteproviders/twitter": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
