--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.1",
         "laravel/framework": "^7.24",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.*",
+        "laravelcollective/html": "^6.2",
         "socialiteproviders/twitter": "^3.0"
     },
     "require-dev": {
