--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.*",
         "laravelcollective/html": "^6.2",
+        "socialiteproviders/google": "^3.1",
+        "socialiteproviders/line": "^2.1",
         "socialiteproviders/twitter": "^3.0"
     },
     "require-dev": {
